--- a/src/Web/ClientApp/src/styles.scss
+++ b/src/Web/ClientApp/src/styles.scss
@@ -1,12 +1,29 @@
-/* You can add global styles to this file, and also import other style files */
-
-/* Provide sufficient contrast against white background */
-a {
-  color: #0366d6;
+.material-icons {
+  font-family: 'Material Icons';
+  font-weight: normal;
+  font-style: normal;
+  font-size: 24px;
+  line-height: 1;
+  letter-spacing: normal;
+  text-transform: none;
+  display: inline-block;
+  white-space: nowrap;
+  word-wrap: normal;
+  direction: ltr;
+  -webkit-font-feature-settings: 'liga';
+  -webkit-font-smoothing: antialiased;
+}
+html, body {
+  height: 100%;
 }
 
-.btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
-  box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
+body {
+  margin: 0;
+  font-family: Arial,Roboto, "Helvetica Neue", sans-serif;
+  min-width: 400px;
+}
+a {
+  color: #0366d6;
 }
 
 code {
@@ -19,11 +36,25 @@ code {
   border-color: #1861ac;
 }
 
-/* Importing Bootstrap SCSS file. */
-@import "node_modules/bootstrap/scss/bootstrap";
+.mat-button {
+  color: #6200EE;
+}
 
-/* Importing Datepicker SCSS file. */
-@import "node_modules/ngx-bootstrap/datepicker/bs-datepicker";
+.mat-raised-button {
+  color: #f0fff3;
+  background-color: #03DAC5;
+}
+/*mat-focus-indicator add_button mat-mini-fab mat-button-base mat-accent*/
+.mat-mini-fab.mat-accent {
+  background-color: #597EF7;
+}
 
-/* Importing Bootstrap Icons SCSS file. */
-@import "node_modules/bootstrap-icons/font/bootstrap-icons";
+button:focus {
+  outline: none;
+}
+
+.material-icons{
+  cursor:pointer;
+}
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
