--- a/src/Web/ClientApp/src/app/UI/nav-menu/nav-menu.component.html
+++ b/src/Web/ClientApp/src/app/UI/nav-menu/nav-menu.component.html
@@ -9,8 +9,11 @@
                         [routerLinkActiveOptions]="{ exact: true }">
                         <a class="nav-link text-dark" [routerLink]="['/']">Գլխավոր</a>
                     </li>
-                    <li>
-                        <a class="nav-link text-dark" href="/buy">Վաճառք</a>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" href="/buyAll">Վաճառք</a>
+                    </li>
+                  <li class="nav-item">
+                        <a class="nav-link text-dark" href="/agent">Գործակալ</a>
                     </li>
                     <li>
                         <a class="nav-link text-dark" href="/api" target="_blank">API</a>
