--- a/src/Web/ClientApp/src/app/UI/buy/buy.component.html
+++ b/src/Web/ClientApp/src/app/UI/buy/buy.component.html
@@ -13,11 +13,11 @@
                 <p>
                    descreption
                 </p>
-
+                
             </mat-card-content>
             <mat-card-actions>
                 <button mat-button (click)="this.openBuyTypeDialog()" >Վարձով</button>
-                <button mat-button > <a routerLink="/buyAll/buy">Գնել</a></button>
+                <button mat-button class="form-submit" > <a routerLink="/buyAll/buy">Գնել</a></button>
             </mat-card-actions>
         </mat-card>
 
