--- a/src/Web/ClientApp/src/app/UI/nav-menu/nav-menu.component.scss
+++ b/src/Web/ClientApp/src/app/UI/nav-menu/nav-menu.component.scss
@@ -17,3 +17,18 @@ html {
 .box-shadow {
   box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
 }
+nav{
+  background-color: #ff7f0e !important;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+.text-dark{
+  color: white !important;
+}
+.navbar-brand{
+  color: white !important;
+}
+
