--- a/src/Web/ClientApp/src/app/UI/agent-pages/agent-pages.component.html
+++ b/src/Web/ClientApp/src/app/UI/agent-pages/agent-pages.component.html
@@ -1,38 +1,46 @@
-<table mat-table [dataSource]="dataSource" multiTemplateDataRows class="mat-elevation-z8">
-  <ng-container *ngFor="let column of columnsToDisplay; let i = index" [matColumnDef]="column">
-    <th mat-header-cell *matHeaderCellDef> {{ column }} </th>
-    <td mat-cell *matCellDef="let element"> {{ element[column] }} </td>
-  </ng-container>
+<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
-  <ng-container matColumnDef="expand">
-    <th mat-header-cell *matHeaderCellDef></th>
-    <td mat-cell *matCellDef="let element">
-      <button mat-icon-button aria-label="expand row"
-              (click)="(expandedElement = expandedElement === element ? null : element); $event.stopPropagation()">
-        <mat-icon>{{ expandedElement === element ? 'keyboard_arrow_up' : 'keyboard_arrow_down' }}</mat-icon>
-      </button>
-    </td>
-  </ng-container>
+    <ng-container matColumnDef="position">
+        <th mat-header-cell *matHeaderCellDef> No.</th>
+        <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+    </ng-container>
 
-  <ng-container matColumnDef="expandedDetail">
-    <td mat-cell *matCellDef="let element" [attr.colspan]="columnsToDisplay.length + 1">
-      <div *ngIf="expandedElement === element" class="example-element-detail">
-        <div class="example-element-diagram">
-          <div class="example-element-position"> {{ element.index }} </div>
-        </div>
-        <div class="example-element-description">
-          {{ element.description }}
-          <span class="example-element-description-attribution"> -- Wikipedia </span>
-        </div>
-      </div>
-    </td>
-  </ng-container>
+    <ng-container matColumnDef="index">
+        <th mat-header-cell *matHeaderCellDef> Կոդ</th>
+        <td mat-cell *matCellDef="let element"> {{element.index}} </td>
+    </ng-container>
 
-  <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
-  <tr mat-row *matRowDef="let row; columns: columnsToDisplay;" class="example-element-row"
-      [class.example-expanded-row]="expandedElement === row"
-      (click)="(expandedElement = expandedElement === row ? null : row); $event.stopPropagation()">
-  </tr>
-  <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
+    <ng-container matColumnDef="type">
+        <th mat-header-cell *matHeaderCellDef> Տեսակ</th>
+        <td mat-cell *matCellDef="let element"> {{element.type}} </td>
+    </ng-container>
 
+    <ng-container matColumnDef="addres">
+        <th mat-header-cell *matHeaderCellDef> Հասցե</th>
+        <td mat-cell *matCellDef="let element"> {{element.addres}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="phone">
+        <th mat-header-cell *matHeaderCellDef> Հեռախոսահամար</th>
+        <td mat-cell *matCellDef="let element"> {{element.phone}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="action">
+        <th mat-header-cell *matHeaderCellDef> Գործողություններ</th>
+        <td mat-cell *matCellDef="let element">
+            <button mat-icon-button class="mx-3">
+                <mat-icon class="material-icons-outlined">
+                    delete
+                </mat-icon>
+            </button> 
+            <button mat-icon-button class="mx-3">
+                <mat-icon class="material-icons-outlined">
+                    done
+                </mat-icon>
+            </button>
+        </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
