--- a/src/Web/ClientApp/src/app/UI/buy/buy-create/buy-create.component.css
+++ b/src/Web/ClientApp/src/app/UI/buy/buy-create/buy-create.component.css
@@ -8,8 +8,8 @@
 }
 
 .but {
-    background: #4a24f1;
-    color: #f0fff3;
+    background-color: #ff7f0e !important;
+    color: white !important;
 }
 
 .butPosetion {
