--- a/src/Web/ClientApp/src/app/UI/home/home.component.html
+++ b/src/Web/ClientApp/src/app/UI/home/home.component.html
@@ -1,1 +1,80 @@
-<h1>Hello, world!</h1>
+<!-- ***** Header Area Start ***** -->
+<header class="header-area header-sticky">
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+                    <!-- ***** Logo Start ***** -->
+                        <h1>title and descreption</h1>
+            </div>
+        </div>
+    </div>
+</header>
+
+<div class="image-container">
+    <img class="animated-image" src="{{ imageSrc }}" alt="Animation">
+</div>
+<!-- ***** Header Area End ***** -->
+
+<div class="contact-page section">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-6">
+                <div class="section-heading">
+                    <h6>| Contact Us</h6>
+                    <h2>Get In Touch With Our Agents</h2>
+                </div>
+                <p>When you really need to download free CSS templates, please remember our website TemplateMo. Also, tell your friends about our website. Thank you for visiting. There is a variety of Bootstrap HTML CSS templates on our website. If you need more information, please contact us.</p>
+                <div class="row">
+                    <div class="col-lg-12">
+                        <div class="item phone">
+                            <img src="assets/images/phone-icon.png" alt="" style="max-width: 52px;">
+                            <h6>010-020-0340<br><span>Phone Number</span></h6>
+                        </div>
+                    </div>
+                    <div class="col-lg-12">
+                        <div class="item email">
+                            <img src="assets/images/email-icon.png" alt="" style="max-width: 52px;">
+                            <h6>info@villa.co<br><span>Business Email</span></h6>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-6">
+                <form id="contact-form" action="" method="post">
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <fieldset>
+                                <label for="name">Full Name</label>
+                                <input type="name" name="name" id="name" placeholder="Your Name..." autocomplete="on" required>
+                            </fieldset>
+                        </div>
+                        <div class="col-lg-12">
+                            <fieldset>
+                                <label for="email">Email Address</label>
+                                <input type="text" name="email" id="email" pattern="[^ @]*@[^ @]*" placeholder="Your E-mail..." required="">
+                            </fieldset>
+                        </div>
+                        <div class="col-lg-12">
+                            <fieldset>
+                                <label for="subject">Subject</label>
+                                <input type="subject" name="subject" id="subject" placeholder="Subject..." autocomplete="on" >
+                            </fieldset>
+                        </div>
+                        <div class="col-lg-12">
+                            <fieldset>
+                                <label for="message">Message</label>
+                                <textarea name="message" id="message" placeholder="Your Message"></textarea>
+                            </fieldset>
+                        </div>
+                        <div class="col-lg-12">
+                            <fieldset>
+                                <button type="submit" mat-raised-button class="orange-button">Send Message</button>
+                            </fieldset>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+
