--- a/src/Web/ClientApp/src/app/UI/nav-menu/nav-menu.component.html
+++ b/src/Web/ClientApp/src/app/UI/nav-menu/nav-menu.component.html
@@ -15,8 +15,11 @@
                   <li class="nav-item">
                         <a class="nav-link text-dark" href="/agent">Գործակալ</a>
                     </li>
-                    <li>
+ <!--                   <li>
                         <a class="nav-link text-dark" href="/api" target="_blank">API</a>
+                    </li>-->
+                    <li>
+                        <a class="nav-link text-dark" (click)="openLogoutDialog()" >ելք</a>
                     </li>
 
                 </ul>
