added more file and more style

--- a/src/Web/ClientApp/src/app/UI/login/login/login.component.css
+++ b/src/Web/ClientApp/src/app/UI/login/login/login.component.css
@@ -11,22 +11,10 @@
 .logout-buttons {
     margin-top: 20px;
 }
-.logout-buttons button {
-    padding: 10px 20px;
-    margin: 0 10px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-}
-.logout-buttons button.primary {
-    background-color: #4caf50;
-    color: #fff;
-}
-.logout-buttons button.secondary {
-    background-color: #ccc;
-    color: #000;
-}
+
+
 h2 {
+    color: black !important;
     text-align: center;
 }
 input[type="text"],
@@ -40,7 +28,7 @@ input[type="password"] {
 }
 input[type="submit"] {
     width: 100%;
-    background-color: #4caf50;
+    background-color: #ff7f0e;
     color: white;
     padding: 14px 20px;
     margin: 8px 0;
@@ -49,12 +37,22 @@ input[type="submit"] {
     cursor: pointer;
 }
 input[type="submit"]:hover {
-    background-color: #45a049;
+    background-color: #ff7f14;
 }
 .container {
-    width: 300px;
-    padding: 20px;
-    background-color: #fff;
-    border-radius: 5px;
-    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    width: 500px;
+    padding: 30px;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+}
+.background-images {
+    width: 100%;
+    height: 100vh;
+    max-height: 100vh;
+    background-image: url('/assets/images/photo_Login.jpg');
+    background-size: cover; 
+    background-repeat: no-repeat; 
+    text-align: center; 
 }
