--- a/src/Web/ClientApp/src/app/app.component.html
+++ b/src/Web/ClientApp/src/app/app.component.html
@@ -1,5 +1,5 @@
 <body>
-<div *ngIf="!this.login" class="container">
+<div *ngIf="!this.login" class="">
   <app-login></app-login>
 </div>
   <app-nav-menu *ngIf="this.login"></app-nav-menu>
