--- a/src/Web/ClientApp/src/app/UI/buy/buy-create/buy-create.component.css
+++ b/src/Web/ClientApp/src/app/UI/buy/buy-create/buy-create.component.css
@@ -16,3 +16,26 @@
     display: flex;
     justify-content: flex-end;
 }
+
+/* Style for the custom file upload button */
+.custom-file-upload {
+    cursor: pointer;
+    background-color: #007bff;
+    color: white;
+    border: 1px solid #007bff;
+    border-radius: 4px;
+    padding: 8px 12px;
+    display: inline-block;
+    margin-top: 5px;
+}
+
+/* Hide the actual file input */
+input[type="file"] {
+    display: none;
+}
+
+/* Style for the selected image */
+img {
+    max-width: 100%;
+    margin-top: 10px;
+}
