--- a/src/Web/ClientApp/src/app/UI/buy/buy-create/buy-create.component.html
+++ b/src/Web/ClientApp/src/app/UI/buy/buy-create/buy-create.component.html
@@ -25,6 +25,18 @@
             <mat-checkbox class="example-margin">Վարձով</mat-checkbox>
             <mat-checkbox class="example-margin">Վաճառք</mat-checkbox>
         </section>
+        <div class="form-group">
+            <label for="imageUpload">Նկարի կցում:</label>
+            <div>
+                <input type="file" id="imageUpload" name="imageUpload" (change)="onFileSelected($event)">
+                <label for="imageUpload" class="custom-file-upload">
+                    Select Image
+                </label>
+                <img width="40px" height="40px" *ngIf="imageUrl" [src]="imageUrl" alt="Selected Image">
+            </div>
+
+        </div>
+        
             <mat-form-field appearance="outline">
                 <mat-label>Նկարագրություն</mat-label>
                 <textarea formControlName="descreption" cols="10" rows="5" matInput placeholder="Նկարագրություն"></textarea>
