--- a/src/Web/ClientApp/src/app/UI/home/home.component.html
+++ b/src/Web/ClientApp/src/app/UI/home/home.component.html
@@ -1,19 +1,7 @@
-<!-- ***** Header Area Start ***** -->
-<header class="header-area header-sticky">
-    <div class="container">
-        <div class="row">
-            <div class="col-12">
-                    <!-- ***** Logo Start ***** -->
-                        <h1>title and descreption</h1>
-            </div>
-        </div>
-    </div>
-</header>
-
-<div class="image-container">
+<div class="image-with-text">
     <img class="animated-image" src="{{ imageSrc }}" alt="Animation">
+    <p></p>
 </div>
-<!-- ***** Header Area End ***** -->
 
 <div class="contact-page section">
     <div class="container">
@@ -28,13 +16,13 @@
                     <div class="col-lg-12">
                         <div class="item phone">
                             <img src="assets/images/phone-icon.png" alt="" style="max-width: 52px;">
-                            <h6>010-020-0340<br><span>Phone Number</span></h6>
+                            <h6>010-020-0340<br><span>Հեռախոսահամար</span></h6>
                         </div>
                     </div>
                     <div class="col-lg-12">
                         <div class="item email">
                             <img src="assets/images/email-icon.png" alt="" style="max-width: 52px;">
-                            <h6>info@villa.co<br><span>Business Email</span></h6>
+                            <h6>info@villa.co<br><span>Էլ․հասցե</span></h6>
                         </div>
                     </div>
                 </div>
@@ -66,10 +54,8 @@
                                 <textarea name="message" id="message" placeholder="Your Message"></textarea>
                             </fieldset>
                         </div>
-                        <div class="col-lg-12">
-                            <fieldset>
-                                <button type="submit" mat-raised-button class="orange-button">Send Message</button>
-                            </fieldset>
+                        <div>
+                                <button mat-button >Send Message</button>
                         </div>
                     </div>
                 </form>
