--- a/src/Web/ClientApp/src/app/UI/agent-pages/agent-pages.component.html
+++ b/src/Web/ClientApp/src/app/UI/agent-pages/agent-pages.component.html
@@ -14,16 +14,29 @@
         <th mat-header-cell *matHeaderCellDef> Տեսակ</th>
         <td mat-cell *matCellDef="let element"> {{element.type}} </td>
     </ng-container>
+  <ng-container matColumnDef="price">
+        <th mat-header-cell *matHeaderCellDef> Գինը</th>
+        <td mat-cell *matCellDef="let element"> {{element.price}} </td>
+    </ng-container>
 
     <ng-container matColumnDef="addres">
         <th mat-header-cell *matHeaderCellDef> Հասցե</th>
         <td mat-cell *matCellDef="let element"> {{element.addres}} </td>
     </ng-container>
+  <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef> Անուն</th>
+        <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+    </ng-container>
+
 
     <ng-container matColumnDef="phone">
         <th mat-header-cell *matHeaderCellDef> Հեռախոսահամար</th>
         <td mat-cell *matCellDef="let element"> {{element.phone}} </td>
     </ng-container>
+  <ng-container matColumnDef="email">
+    <th mat-header-cell *matHeaderCellDef> Էլ․հասցե</th>
+    <td mat-cell *matCellDef="let element"> {{element.email}} </td>
+  </ng-container>
 
     <ng-container matColumnDef="action">
         <th mat-header-cell *matHeaderCellDef> Գործողություններ</th>
@@ -32,7 +45,7 @@
                 <mat-icon class="material-icons-outlined">
                     delete
                 </mat-icon>
-            </button> 
+            </button>
             <button mat-icon-button class="mx-3">
                 <mat-icon class="material-icons-outlined">
                     done
