--- a/src/Web/ClientApp/src/app/UI/buy/buy-type/buy-type.component.html
+++ b/src/Web/ClientApp/src/app/UI/buy/buy-type/buy-type.component.html
@@ -25,9 +25,9 @@
             Զանգահահարել 097565505 հեռախոսահամարին
           </p>
           <button mat-button routerLink="/buy" >Հետ</button>
-          <button mat-button class="but">Հաստատել</button>
+          <button mat-button class="mat-button">Հաստատել</button>
         </mat-card-subtitle>
-        <img  width="500px" height="500px" src="assets/images/tner.png" >
+        <img  width="500px" height="500px" src="assets/home/photo_home4.jpg" >
       </mat-card-title-group>
     </mat-card-header>
     <mat-card-content>
