--- a/src/Web/ClientApp/src/app/UI/buy/buy.component.html
+++ b/src/Web/ClientApp/src/app/UI/buy/buy.component.html
@@ -1,26 +1,108 @@
-    <div class="container">
+<div class="container">
 
-        <div class="example-button-row  createButten">
-            <button class="mat-button" mat-raised-button (click)="this.openCreateDialog()" >Ավելացնել</button>
-        </div>
-        <mat-card class="example-card">
-            <img mat-card-image src="assets/images/tner.png" alt="Photo of a Shiba Inu">
-            <mat-card-content>
-                <h4>name</h4>
-                <h4>Kod</h4>
-                <p>price</p>
-                <p>addres</p>
-                <p>
-                   descreption
-                </p>
-                
-            </mat-card-content>
-            <mat-card-actions>
-                <button mat-button (click)="this.openBuyTypeDialog()" >Վարձով</button>
-                <button mat-button class="form-submit" > <a routerLink="/buyAll/buy">Գնել</a></button>
-            </mat-card-actions>
-        </mat-card>
+  <div class="example-button-row  createButten">
+    <button class="mat-button" mat-raised-button (click)="this.openCreateDialog()">Ավելացնել</button>
+  </div>
+  <div class="crad-conteiner">
+    <mat-card class="example-card">
+      <img mat-card-image src="assets/home/photo_home1.jpg" alt="Photo of a Shiba Inu">
+      <mat-card-content>
+        <p style="margin-top: 10px">Տեսակ։ Առանձնատուն</p>
+        <p>Կոդ։ 1</p>
+        <p>Արժեք։ 500$</p>
+        <p>Հասցե։ Սայաթ Նովա 5</p>
+        <p>
+        </p>
 
-    </div>
+      </mat-card-content>
+      <mat-card-actions>
+        <button mat-button (click)="this.openBuyTypeDialog()">Վարձով</button>
+        <button mat-button class="form-submit"><a routerLink="/buyAll/buy">Գնել</a></button>
+      </mat-card-actions>
+    </mat-card>
+    <mat-card class="example-card">
+      <img mat-card-image src="assets/home/photo_home2.jpg" alt="Photo of a Shiba Inu">
+      <mat-card-content>
+        <p style="margin-top: 10px">Տեսակ։ Առանձնատուն</p>
+        <p>Կոդ։ 2</p>
+        <p>Արժեք։ 85000$</p>
+        <p>Հասցե։ Մարշալ Բաղրամյան 54</p>
+        <p>
+        </p>
+
+      </mat-card-content>
+      <mat-card-actions>
+        <button mat-button (click)="this.openBuyTypeDialog()">Վարձով</button>
+        <button mat-button class="form-submit"><a routerLink="/buyAll/buy">Գնել</a></button>
+      </mat-card-actions>
+    </mat-card>
+    <mat-card class="example-card">
+      <img mat-card-image src="assets/home/photo_hoem3.jpg" alt="Photo of a Shiba Inu">
+      <mat-card-content>
+        <p style="margin-top: 10px">Տեսակ։ Քոթեջ</p>
+        <p>Կոդ։ 3</p>
+        <p>Արժեք։ 75000$</p>
+        <p>Հասցե։ Զորավար Անդրանիկ 89</p>
+        <p>
+        </p>
+
+      </mat-card-content>
+      <mat-card-actions>
+        <button mat-button (click)="this.openBuyTypeDialog()">Վարձով</button>
+        <button mat-button class="form-submit"><a routerLink="/buyAll/buy">Գնել</a></button>
+      </mat-card-actions>
+    </mat-card>
+    <mat-card class="example-card">
+      <img mat-card-image src="assets/home/photo_home4.jpg" alt="Photo of a Shiba Inu">
+      <mat-card-content>
+        <p style="margin-top: 10px">Տեսակ։ Առանձնատուն</p>
+        <p>Կոդ։ 4</p>
+        <p>Արժեք։ 1500$</p>
+        <p>Հասցե։ Սայաթ Նովա 37</p>
+        <p>
+        </p>
+
+      </mat-card-content>
+      <mat-card-actions>
+        <button mat-button (click)="this.openBuyTypeDialog()">Վարձով</button>
+        <button mat-button class="form-submit"><a routerLink="/buyAll/buy">Գնել</a></button>
+      </mat-card-actions>
+    </mat-card>
+    <mat-card class="example-card">
+      <img mat-card-image src="assets/home/photo_home5.jpg" alt="Photo of a Shiba Inu">
+      <mat-card-content>
+        <p style="margin-top: 10px">Տեսակ։ Առանձնատուն</p>
+        <p>Կոդ։ 5</p>
+        <p>Արժեք։ 500$</p>
+        <p>Հասցե։ Գուսան Շերամի 77</p>
+        <p>
+        </p>
+
+      </mat-card-content>
+      <mat-card-actions>
+        <button mat-button (click)="this.openBuyTypeDialog()">Վարձով</button>
+        <button mat-button class="form-submit"><a routerLink="/buyAll/buy">Գնել</a></button>
+      </mat-card-actions>
+    </mat-card>
+    <mat-card class="example-card">
+      <img mat-card-image src="assets/home/photo_home6.jpg" alt="Photo of a Shiba Inu">
+      <mat-card-content>
+        <p style="margin-top: 10px">Տեսակ։ Առանձնատուն</p>
+        <p>Կոդ։ 6</p>
+        <p>Արժեք։ 355000$</p>
+        <p>Հասցե։  Կեչառեցու 32</p>
+        <p>
+        </p>
+
+      </mat-card-content>
+      <mat-card-actions>
+        <button mat-button (click)="this.openBuyTypeDialog()">Վարձով</button>
+        <button mat-button class="form-submit"><a routerLink="/buyAll/buy">Գնել</a></button>
+      </mat-card-actions>
+    </mat-card>
+  </div>
+
+
+</div>
 
 
