--- a/src/Web/ClientApp/src/app/UI/buy/rent/rent.component.html
+++ b/src/Web/ClientApp/src/app/UI/buy/rent/rent.component.html
@@ -24,7 +24,7 @@
   </div>
   <mat-card-actions>
     <button mat-button [mat-dialog-close]="true" >Չեղարկել</button>
-    <button  mat-button class="but"> Հաստատել</button>
+    <button class="mat-button" mat-button > Հաստատել</button>
   </mat-card-actions>
 </mat-list>
 
