--- a/src/Web/ClientApp/src/app/UI/buy/buy-create/buy-create.component.css
+++ b/src/Web/ClientApp/src/app/UI/buy/buy-create/buy-create.component.css
@@ -1,5 +1,6 @@
 .createInput {
-    width: 400px;
+  overflow-y: hidden;
+  width: 400px;
 }
 
 .example-form {
@@ -9,24 +10,28 @@
 
 .but {
     background-color: #ff7f0e !important;
-    color: white !important;
+    color: white !important; margin-bottom: 10px;
 }
 
 .butPosetion {
     display: flex;
     justify-content: flex-end;
 }
+.selected-checkbox {
+  font-weight: bold;
+  color: blue;
+  font-size: 16px;
+}
 
 /* Style for the custom file upload button */
 .custom-file-upload {
     cursor: pointer;
-    background-color: #007bff;
-    color: white;
-    border: 1px solid #007bff;
+    background-color: white;
     border-radius: 4px;
     padding: 8px 12px;
     display: inline-block;
     margin-top: 5px;
+    margin-bottom: 5px;
 }
 
 /* Hide the actual file input */
@@ -38,4 +43,28 @@ input[type="file"] {
 img {
     max-width: 100%;
     margin-top: 10px;
+}
+
+
+.image-column {
+  display: flex;
+}
+
+.image-container {
+  margin-left: 10px;
+  margin-bottom: 10px; /* Add spacing between images */
+}
+
+.selected-image {
+  display: block;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%; /* Make images round */
+  object-fit: cover; /* Scale images to cover their container */
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Add a subtle shadow */
+  transition: transform 0.3s ease; /* Add a smooth hover effect */
+}
+
+.selected-image:hover {
+  transform: scale(2.2); /* Scale up the image on hover */
 }
