--- a/src/Web/ClientApp/src/app/UI/home/home.component.html
+++ b/src/Web/ClientApp/src/app/UI/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="image-with-text">
     <img class="animated-image" src="{{ imageSrc }}" alt="Animation">
-    <p></p>
+    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
 </div>
 
 <div class="contact-page section">
@@ -8,10 +8,10 @@
         <div class="row">
             <div class="col-lg-6">
                 <div class="section-heading">
-                    <h6>| Contact Us</h6>
-                    <h2>Get In Touch With Our Agents</h2>
+                    <h2>Հետադարձ կապ</h2>
                 </div>
-                <p>When you really need to download free CSS templates, please remember our website TemplateMo. Also, tell your friends about our website. Thank you for visiting. There is a variety of Bootstrap HTML CSS templates on our website. If you need more information, please contact us.</p>
+                <p>Հարցեր դեպքում կարող եք կապնվել մեզ հետ նշված հեռախոսահամրի կամ էլ․ հասցեյի միջոցով։
+                  Ինչպես նաև կարող եք թողնել Ձեզ հուզող հարցերը մեր մասնագետները հնարաորինս սեղմ ժամկերներում կապատասխանեն Ձեր հարցերին։</p>
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="item phone">
@@ -32,30 +32,30 @@
                     <div class="row">
                         <div class="col-lg-12">
                             <fieldset>
-                                <label for="name">Full Name</label>
-                                <input type="name" name="name" id="name" placeholder="Your Name..." autocomplete="on" required>
+                                <label for="name">Անուն </label>
+                                <input type="name" name="name" id="name" placeholder="Անուն" autocomplete="on" required>
                             </fieldset>
                         </div>
                         <div class="col-lg-12">
                             <fieldset>
-                                <label for="email">Email Address</label>
-                                <input type="text" name="email" id="email" pattern="[^ @]*@[^ @]*" placeholder="Your E-mail..." required="">
+                                <label for="email">Էլ․հասցե</label>
+                                <input type="text" name="email" id="email" pattern="[^ @]*@[^ @]*" placeholder="Էլ․հասցե" required="">
                             </fieldset>
                         </div>
                         <div class="col-lg-12">
                             <fieldset>
-                                <label for="subject">Subject</label>
-                                <input type="subject" name="subject" id="subject" placeholder="Subject..." autocomplete="on" >
+                                <label for="subject">Հեռախոսահամար</label>
+                                <input type="subject" name="subject" id="subject" placeholder="Հեռախոսահամար" autocomplete="on" >
                             </fieldset>
                         </div>
                         <div class="col-lg-12">
                             <fieldset>
-                                <label for="message">Message</label>
-                                <textarea name="message" id="message" placeholder="Your Message"></textarea>
+                                <label for="message">Հարցեր</label>
+                                <textarea name="message" id="message" placeholder="Հարցեր"></textarea>
                             </fieldset>
                         </div>
                         <div>
-                                <button mat-button >Send Message</button>
+                                <button id="form-submit" mat-button >ՈՒղարկել </button>
                         </div>
                     </div>
                 </form>
