--- a/src/Web/ClientApp/src/app/UI/nav-menu/nav-menu.component.html
+++ b/src/Web/ClientApp/src/app/UI/nav-menu/nav-menu.component.html
@@ -15,10 +15,13 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-dark" href="/agent">Գործակալ</a>
-                    </li> 
-             <!--       <li class="nav-item">
-                        <a class="nav-link text-dark" href="/agent">Կապ մեզ հետ </a>
-                    </li>-->
+                    </li>
+                  <li class="nav-item">
+                        <a class="nav-link text-dark" href="/about">Մեր մասին</a>
+                    </li>
+                  <li class="nav-item">
+                        <a class="nav-link text-dark" href="/agent">Հետադարձ կապ</a>
+                    </li>
                     <li>
                         <a class="nav-link text-dark" (click)="openLogoutDialog()">Ելք</a>
                     </li>
